MDEV-27868 buf_pool.flush_list is in the wrong order

buf_pool_t::insert_into_flush_list(): Remove any clean blocks
that the buf_pool.flush_list may contain ever since
commit 22b62edaedddb1cabd5b855cdd39a5e90a5695a2 (MDEV-25113).

This fixes up commit a635c40648519fd6c3729c9657872a16a0a20821 (MDEV-27774).