storage/innobase/buf/buf0flu.cc
@@ -188,15 +188,33 @@ void buf_pool_t::insert_into_flush_list(buf_block_t *block, lsn_t lsn) noexcept
   MEM_CHECK_DEFINED(block->page.zip.data
                     ? block->page.zip.data : block->page.frame,
                     block->physical_size());
+rescan:
   if (buf_page_t *prev= UT_LIST_GET_FIRST(flush_list))
   {
-    if (prev->oldest_modification() <= lsn)
+    lsn_t om= prev->oldest_modification();
+    if (om == 1)
+    {
+      delete_from_flush_list(prev);
+      goto rescan;
+    }
+    ut_ad(om > 2);
+    if (om <= lsn)
       goto insert_first;
     while (buf_page_t *next= UT_LIST_GET_NEXT(list, prev))
-      if (next->oldest_modification() <= lsn)
+    {
+      om= next->oldest_modification();
+      if (om == 1)
+      {
+        delete_from_flush_list(next);
+        continue;
+      }
+      ut_ad(om > 2);
+      if (om <= lsn)
         break;
       else
         prev= next;
+    }
+    flush_hp.adjust(prev);
     UT_LIST_INSERT_AFTER(flush_list, prev, &block->page);
   }
   else
